==> cschwick/PICO-football-display/Pico_ST7789/Pico_ST7789.cpp <==
#include "Pico_ST7789.h"
#include "hardware/spi.h"
#include "hardware/gpio.h"
#include "stdio.h"
#include "TextFonts.h"
#define ST7789_NOP     0x00
#define ST7789_SWRESET 0x01
#define ST7789_SLPIN   0x10  // sleep on
#define ST7789_SLPOUT  0x11  // sleep off
#define ST7789_PTLON   0x12  // partial on
#define ST7789_NORON   0x13  // partial off
#define ST7789_INVOFF  0x20  // invert off
#define ST7789_INVON   0x21  // invert on
#define ST7789_DISPOFF 0x28  // display off
#define ST7789_DISPON  0x29  // display on
#define ST7789_IDMOFF  0x38  // idle off
#define ST7789_IDMON   0x39  // idle on
#define ST7789_CASET   0x2A
#define ST7789_RASET   0x2B
#define ST7789_RAMWR   0x2C
#define ST7789_RAMRD   0x2E
#define ST7789_COLMOD  0x3A
#define ST7789_MADCTL  0x36
#define ST7789_PTLAR    0x30   // partial start/end
#define ST7789_VSCRDEF  0x33   // SETSCROLLAREA
#define ST7789_VSCRSADD 0x37
#define ST7789_WRDISBV  0x51
#define ST7789_WRCTRLD  0x53
#define ST7789_WRCACE   0x55
#define ST7789_WRCABCMB 0x5e
#define ST7789_POWSAVE    0xbc
#define ST7789_DLPOFFSAVE 0xbd
#define ST7789_MADCTL_MY  0x80
#define ST7789_MADCTL_MX  0x40
#define ST7789_MADCTL_MV  0x20
#define ST7789_MADCTL_ML  0x10
#define ST7789_MADCTL_RGB 0x00
#define ST7789_240x240_XSTART 0
#define ST7789_240x240_YSTART 0
#define ST_CMD_DELAY   0x80
#define SPI_START
#define SPI_END
#define DC_DATA     gpio_put(TFT_DC, 1);
#define DC_COMMAND  gpio_put(TFT_DC, 0);
#define CS_IDLE
#define CS_ACTIVE

inline void Pico_ST7789::writeSPI(uint8_t data) {
    uint8_t res = spi_write_blocking(spi_inst, &data, 1);
}

inline void Pico_ST7789::writeMulti(uint16_t color, uint32_t num)
{
  uint8_t buf[2] = {uint8_t(color>>8),uint8_t(color & 0xff)};
  while(num--) {
    spi_write_blocking(spi_inst, buf, 2);
  }
}

inline void Pico_ST7789::copyMulti(uint8_t *img, uint16_t num)
{
  while(num--)
    {
      spi_write_blocking( spi_inst, (img+1), 1);
      spi_write_blocking( spi_inst, (img+0), 1);
      img+=2;
    }
  sleep_ms(10);
}

void Pico_ST7789::init() 
{
  commonST7789Init(NULL);

  if((_width==240) && (_height==240)) {
    _colstart = 0;
    _rowstart = 80;
  } else {
    _colstart = 0;
    _rowstart = 0;
  }
  _ystart = _xstart = 0;

  displayInit(init_cmds);
  if ( _inversion )
    invertDisplay( true );
  else
    invertDisplay( false );

  setRotation(_rotation);

}

void Pico_ST7789::displayInit(const uint8_t *addr) 
{
  uint8_t  numCommands, numArgs;
  uint16_t ms;
  numCommands = *addr++;
    
  while(numCommands--) {
    writeCmd(*addr++);
    numArgs  = *addr++;
    ms       = numArgs & ST_CMD_DELAY;
    numArgs &= ~ST_CMD_DELAY;
    while(numArgs--) writeData(*addr++);

    if(ms) {
      ms = *addr++;
      if(ms==255) ms=500;
      sleep_ms(ms);
    }
  }
}

void Pico_ST7789::commonST7789Init(const uint8_t *cmdList) 
{ 
  //setup the gpios for reset and data/command

  CS_ACTIVE;
  // Define reset pin and apply a reset
  gpio_init(TFT_RST);
  gpio_set_dir(TFT_RST, GPIO_OUT);
  gpio_put(TFT_RST, 1);

  // Define data/command pin
  gpio_init(TFT_DC);
  gpio_set_dir(TFT_DC, GPIO_OUT);


  // set up the SPI: spi0 or spi1
  spi_inst = SPI_TFT_PORT;
  // This example will use SPI0 at 4.0MHz.
  // This has to be before setting up pins and format!
  //spi_init(spi_inst, 16000000); // with 65MHz was still working...
  // for scope measurents
  spi_init(spi_inst, 32000000); // with 65MHz was still working...
  // Now set up the SPI pins
  gpio_set_function(SPI_TFT_SCK, GPIO_FUNC_SPI);
  gpio_set_function(SPI_TFT_TX, GPIO_FUNC_SPI);
  gpio_set_function(SPI_TFT_RX, GPIO_FUNC_SPI);
  // The Aliexpress 240x240 wants this...:
  spi_set_format( spi_inst, 8, SPI_CPOL_1, SPI_CPHA_0, SPI_MSB_FIRST );

  sleep_ms(100);
  // apply a reset
  gpio_put(TFT_RST, 1);
  sleep_ms(50);
  gpio_put(TFT_RST,0);
  sleep_ms(50);
  gpio_put(TFT_RST,1);
  sleep_ms(50);

  // initialisation command sequence
  if(cmdList) displayInit(cmdList);
}

void Pico_ST7789::setRotation(uint8_t m) 
{
  writeCmd(ST7789_MADCTL);
  uint8_t rotation = m & 3;
  uint16_t tmp;
  switch (rotation) {
   case 0:
     writeData(ST7789_MADCTL_MX | ST7789_MADCTL_MY | ST7789_MADCTL_RGB);
     _xstart = _colstart;
     _ystart = _rowstart;
     break;
   case 1:
     writeData(ST7789_MADCTL_MY | ST7789_MADCTL_MV | ST7789_MADCTL_RGB);
     _ystart = _colstart;
     _xstart = _rowstart;
     tmp = _width;
     _width = _height;
     _height = tmp;
     break;
  case 2:
     writeData(ST7789_MADCTL_RGB);
     _xstart = _colstart;
     //     _ystart = _rowstart;
     _ystart = 0;
     break;
   case 3:
     writeData(ST7789_MADCTL_MX | ST7789_MADCTL_MV | ST7789_MADCTL_RGB);
     _ystart = _colstart;
     _xstart = 0;
     tmp = _width;
     _width = _height;
     _height = tmp;
     break;
  }
}
